--- a/01. Few-Shot-Learning-Semantic-Search.ipynb
+++ b/01. Few-Shot-Learning-Semantic-Search.ipynb
@@ -1014,13 +1014,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5d5a58c4fe14189bd7eb76270e0fb2b",
+       "model_id": "98b9115c7f0f448fb608ab2f22bdc7fb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1035,13 +1035,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1668, 4)\n"
+      "(1079, 4)\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "078e03e5bb99495eb01ddcef07ebc266",
+       "model_id": "5589194e84da468eb4f435dd751e8378",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1056,37 +1056,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QUERY LABELS: positive\n",
+      "QUERY LABELS: negative\n",
       "QUERY TEXT:\n",
-      "Realmente me gustó este Summerslam debido a la apariencia de la arena, las cortinas y simplemente la apariencia general me resultó interesante por alguna razón. De todos modos, este podría haber sido  [...]\n",
+      " Dios, esto fue inmensamente aburrido. el protagonista (Christian Schoyen) tiene que ser el peor actor que he visto en mi vida. y otra cosa, si el personaje de la película se mudara a Estados Unidos c [...]\n",
       "\n",
       "==================================================\n",
       "Retrieved documents:\n",
       "==================================================\n",
       "TEXT:\n",
-      "I watched the 1st scarecrow movie and didn't bag out that one, though i knew it was b grade it actually had some decent gore and the guy playing the scarecrow was an awesome acrobat and had some good  [...]\n",
-      "SCORE: 1.02\n",
+      "... when dubbed into another language. Let's face it: Neither Nielsen nor Schwarzenegger are really good actors when it comes to dialog. And given the campy lines they are supposed to utter this is a  [...]\n",
+      "SCORE: 0.78\n",
       "LABELS: negative\n",
       "==================================================\n",
       "TEXT:\n",
-      "Another movie with a star of a wrestling. So far I have noticed....wrestlers can't act on the movie screen. This movie is no exception.<br /><br />The action is dreadful. It makes you laugh at what th [...]\n",
-      "SCORE: 1.03\n",
+      "This TVM seems to have polarised opinions amongst the commentators on this page so perhaps I can settle everything by saying this is a very stupid not very well made television movie . How bad is it ? [...]\n",
+      "SCORE: 0.83\n",
       "LABELS: negative\n",
       "==================================================\n",
       "TEXT:\n",
-      "I honestly don't understand how tripe like this gets made. The worst junior-high talent show skit you've ever seen is more entertaining than this film. Will Ferrell's wrestling fetish provides the onl [...]\n",
-      "SCORE: 1.08\n",
+      "It's the single unfunniest thing I ever watched. It's sad how he tries so hard to come up with a good joke and all he does is curse and thinks his disgusting vulgarity is funny. He is the most bitter  [...]\n",
+      "SCORE: 0.85\n",
       "LABELS: negative\n",
       "==================================================\n",
       "TEXT:\n",
-      "It wasn't notable enough to be truly horrible, it was just incredibly lame. The story was not half bad, but the execution was just horrendous.<br /><br />To start with, it moved too fast for us to emo [...]\n",
-      "SCORE: 1.16\n",
-      "LABELS: negative\n",
+      "Cusack does his best David Niven in this one, although I don't know if anyone besides me noticed it.<br /><br />When seen with this in mind, its a deliciously over saturated 'wants to be taken more se [...]\n",
+      "SCORE: 0.86\n",
+      "LABELS: positive\n",
       "==================================================\n",
       "TEXT:\n",
-      "Seeing all of the negative reviews for this movie, I figured that it could be yet another comic masterpiece that wasn't quite meant to be. I watched the first two fight scenes, listening to the generi [...]\n",
-      "SCORE: 1.18\n",
-      "LABELS: negative\n",
+      "Director Vincenzo Natali's Cypher is a complex and imaginative thriller which, although requiring some suspension of belief and plenty of concentration, manages to be a thoroughly entertaining experie [...]\n",
+      "SCORE: 0.87\n",
+      "LABELS: positive\n",
       "==================================================\n",
       "SELECTED LABEL: negative\n"
      ]
@@ -1130,7 +1130,7 @@
     "        print(f\"SELECTED LABEL: {selected_label}\")\n",
     "    return selected_label\n",
     "    \n",
-    "predicted_label = get_nearest_examples(dataset_es_embeddings[0])"
+    "predicted_label = get_nearest_examples(dataset_es_embeddings[10])"
    ]
   },
   {
