Added for medium

--- a/01. Few-Shot-Learning-Semantic-Search.ipynb
+++ b/01. Few-Shot-Learning-Semantic-Search.ipynb
@@ -1,6 +1,26 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Few-Shot Learning With Semantic Search"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Semantic Seach is a great way to get started with few-shot learning. We can use semantic search to find similar documents to a query document. We can then use the results of the search to train a classifier. This is a great way to get started with few-shot learning.\n",
+    "\n",
+    "For our scenario, we will use the `English` version of IMDB sentiment dataset with Reviews as text and Sentiment as labels. We will use the reviews to create an index made up of Dense Vector Embeddings for the semantic search model and we will try to classify the sentiments of `Spanish` Reviews using the results of the semantic search.\n",
+    "\n",
+    "We will make use of a Transformer model with Multilingual Capabilities to embed the text into Dense Vectors in the same space when dealing with multiple languages."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
@@ -82,6 +102,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will shuffle the dataset in a stratified manner and keep only 5000 samples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -156,7 +184,7 @@
     }
    ],
    "source": [
-    "# Shuffle the dataset in stratified mannerand keep only 5000 samples\n",
+    "\n",
     "imdb_data_en = imdb_data_en.sample(frac=1, random_state=42).reset_index(drop=True)\n",
     "imdb_data_en = imdb_data_en[:5000]\n",
     "imdb_data_en.head()"
@@ -185,6 +213,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "save the excel file for translation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
@@ -192,6 +228,14 @@
    "source": [
     "# save the excel file for translation\n",
     "imdb_data_en.to_excel(\"./Data/IMDB Dataset.xlsx\", index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use this excel with Google Translate to tranlate our data into Spanish."
    ]
   },
   {
@@ -287,6 +331,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will create a huggingface dataset from the dataframe imdb_data_en."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
@@ -311,6 +363,14 @@
     "\n",
     "dataset_en = Dataset.from_pandas(imdb_data_en)\n",
     "dataset_en\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As explained earlier, we will load a multilingual model from Sentence Transformers."
    ]
   },
   {
@@ -519,8 +579,15 @@
     "# Load a multilingual model from Sentence Transformers and use it to encode all english sentences in the dataset\n",
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "# model = SentenceTransformer(\"paraphrase-multilingual-MiniLM-L12-v2\")\n",
     "model = SentenceTransformer(\"distiluse-base-multilingual-cased-v1\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above downloads the model from the hub and loads it into memory. We will use this model to encode all the english sentences in the dataset."
    ]
   },
   {
@@ -528,6 +595,14 @@
    "metadata": {},
    "source": [
     "## Model Downloaded, Let's take it for a spin"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets look at one sentence from english dataset and encode it."
    ]
   },
   {
@@ -616,6 +691,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the encoded vector is a 512 dimensional dense vector. Now that we have two dense vectors in the same space, we can compute the cosine similarity between them.\n",
+    "Lets compute the cosine similarity between the two sentences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "metadata": {},
@@ -633,6 +717,15 @@
     "from sentence_transformers import util\n",
     "\n",
     "print(f'Cosine Similarity between sentences in EN vs Spanish is {util.pytorch_cos_sim(sentence_0_english_embedding, sentence_0_spanish_embedding)[0][0]}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wow, that's a high similarity score. We can use this to find similar sentences in our dataset.\n",
+    "Let us now look at an example with completely different sentences. We will use the same model to encode the sentences. We will then compute the cosine similarity between the two sentence and then compare the similarity score with the previous example. We should see a lower similarity score."
    ]
   },
   {
@@ -688,60 +781,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 100,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4af9ee8984e34116a9af0904005a6e97",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "952f535484504119984c6db3d663ae26",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Dataset({\n",
-       "    features: ['embedding'],\n",
-       "    num_rows: 5000\n",
-       "})"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Lets encode all the english sentences in the dataset, we can leverage the map function of the datasets for efficient encoding\n",
-    "def embed(x):\n",
-    "    return {\"embedding\": model.encode(x[\"review\"]) }\n",
-    "\n",
-    "dataset_en_embeddings = dataset_en.map(embed, batched=True, remove_columns=dataset_en.column_names)\n",
-    "# We can now add these embeddings to the dataset as FAISS index, which again is an inbuilt function of the datasets library\n",
-    "dataset_en_embeddings.add_faiss_index(\"embedding\")"
+    "Lets encode all the english sentences in the dataset, we can leverage the map function of the datasets for efficient encoding"
    ]
   },
   {
@@ -802,6 +846,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we have encoded all the english sentences in the dataset and created a FAISS index for efficient similarity search. FAISS index is an integral part of the semantic search pipeline. It is a library for efficient similarity search and clustering of dense vectors. It contains algorithms that search in sets of vectors of any size, up to ones that possibly do not fit in RAM. It also contains supporting code for evaluation and parameter tuning. FAISS is written in C++ with complete wrappers for Python/numpy. Some of the most useful algorithms are implemented on the GPU. It is developed by Facebook AI Research. \n",
+    "\n",
+    "And the best part is it is integrated with Huggingface's Dataset library."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Theoretically, we must compare the query vector to each of the n vectors in the database in order to determine the vectors in the database that are closest to the query vector. This is not an issue for a dataset, but if we expanded it up to hundreds or even millions of records, each query would take a while to process.\n",
+    "\n",
+    "FAISS addresses this issue with several tricks. The main idea is to partition the dataset. If we only need to compare the query vector to a subset of the database, we can speed up the process significantly. But if we just randomly partition the dataset, how can we decide which partition to search, and what guarantees do we get for finding the most similar entries? Evidently, there must be a better solution: apply k-means clustering to the dataset! This clusters the embeddings into groups by similarity. Furthermore, for each group we get a centroid vector, which is the average of all members of the group "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 102,
    "metadata": {},
@@ -840,6 +904,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We choose K as 4 and train a KMeans model on the encoded english sentences."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
@@ -859,6 +931,14 @@
     "k = 4\n",
     "kmeans = KMeans(n_clusters=k, init=\"k-means++\", random_state=42)\n",
     "kmeans.fit(dataset_en_embeddings[\"embedding\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a new column in the dataset to store and mark the cluster number for each sentence."
    ]
   },
   {
@@ -1010,6 +1090,15 @@
    ],
    "source": [
     "centroids"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The below code, takes an encoded Query text and finds the top 5 similar sentences in the corpus.\n",
+    "We first compute the cosine similarity between the query and all the centroids of the Clusters. Then we use the query vector to find the closest sentences within that cluster using the FAISS index."
    ]
   },
   {
@@ -1205,6 +1294,15 @@
    ],
    "source": [
     "predicted_label = get_nearest_examples(dataset_es_embeddings[12],k=3)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now lets calculate the accuracy of the method on a sample of the Translated Spanish Reviews.\n",
+    "We will use the top 3 similar sentences to label the spanish reviews. If the majority of the top 3 sentences are of the same label, we will label the spanish review with that label."
    ]
   },
   {
@@ -4054,11 +4152,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Wow!, we get an accuracy of 67% on the 100 rows of the dataset. This is a great start. We can now try to improve the accuracy by using a larger dataset and also by using a larger model.\n",
+    "We can use these embedding along with the labels to build a classifier or a regressor to predict the sentiment of the review. "
+   ]
   }
  ],
  "metadata": {
