--- a/02. Feedback-Continual-Learning-Transformers.ipynb
+++ b/02. Feedback-Continual-Learning-Transformers.ipynb
@@ -2708,6 +2708,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f33f7c9a8539436a918fdeb2ecd1054b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Now calculate the accuracy on the small_eval_dataset with the updated model\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "small_eval_dataset_tokenized = small_eval_dataset.map(tokenize_function, batched=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['text', 'label', 'input_ids', 'attention_mask'],\n",
+       "    num_rows: 1000\n",
+       "})"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_eval_dataset_tokenized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The following columns in the evaluation set don't have a corresponding argument in `DistilBertForSequenceClassification.forward` and have been ignored: text. If text are not expected by `DistilBertForSequenceClassification.forward`,  you can safely ignore this message.\n",
+      "***** Running Evaluation *****\n",
+      "  Num examples = 1000\n",
+      "  Batch size = 64\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a55c54f0544543f096a291af9e72676b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 1.2522212266921997,\n",
+       " 'eval_accuracy': 0.7120000123977661,\n",
+       " 'eval_runtime': 17.8617,\n",
+       " 'eval_samples_per_second': 55.986,\n",
+       " 'eval_steps_per_second': 0.896}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Evaluate the model on the small_eval_dataset_tokenized and calculate the accuracy using the model\n",
+    "def compute_metrics(eval_pred):\n",
+    "    logits, labels = eval_pred\n",
+    "    predictions = np.argmax(logits, axis=-1)\n",
+    "    return {\"accuracy\": (predictions == labels).astype(np.float32).mean().item()}\n",
+    "\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"./results\",          # output directory\n",
+    "    num_train_epochs=3,              # total number of training epochs\n",
+    "    per_device_train_batch_size=16,  # batch size per device during training\n",
+    "    per_device_eval_batch_size=64,   # batch size for evaluation\n",
+    "    warmup_steps=500,                # number of warmup steps for learning rate scheduler\n",
+    "    weight_decay=0.01,               # strength of weight decay\n",
+    "    logging_dir='./logs',            # directory for storing logs\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    compute_metrics=compute_metrics,\n",
+    "    train_dataset=small_eval_dataset_tokenized,\n",
+    "    eval_dataset=small_eval_dataset_tokenized,\n",
+    ")\n",
+    "\n",
+    "trainer.evaluate()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
